k8s/deployment-patch.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns-updater
spec:
  template:
    spec:
      containers:
        - env:
            - name: "poll.cron"
              value: "0 */1 * * * *"
            - name: "cloudflare.domain"
              value: "magnuen2k.com"
            - name: "cloudflare.api.email"
              value: "magnuen2k@gmail.com"
            - name: "cloudflare.api.key"
              valueFrom:
                secretKeyRef:
                  name: cf-secret
                  key: key
          name: dns-updater
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "1Gi"
