k8s/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dns-updater
spec:
  host: dns.apps.lab.magnuen2k.com
  to:
    kind: Service
    name: dns-updater
  port:
    targetPort: dns-updater
